Updated image refs and README.
This update contains refreshed blog links and internal links to each post's original markdown.

--- a/docs/05.03.02 - Monitoring Power Automate - Run Time - Tracked Properties and Error Handling.md
+++ b/docs/05.03.02 - Monitoring Power Automate - Run Time - Tracked Properties and Error Handling.md
@@ -14,11 +14,11 @@ If you have not already reviewed Part 1 in the Power Automate Run Time series, p
 
 Consider the image below which shows capturing the status code and API throttle information for a List Records action in the **Common Data Service (current environment)** connector.
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate//TrackedProps/TrackedProperties-ActionAndActions.JPG"  />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate//TrackedProps/TrackedProperties-ActionAndActions.JPG"  />
 
 The example image below, where we are performing a 'List records' with the **Common Data Service** connector, now has a more **friendly way of tracking the response code and API throttling response**. This is a light weight example but should drive home the concept of **how, using Tracked Properties, I can now reference the "*TrackedPropertiesExample*" variable which now includes outputs from a previous action**.
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate//TrackedProps/TrackedProperties.CDS.Headers.JPG"  />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate//TrackedProps/TrackedProperties.CDS.Headers.JPG"  />
 
 NOTE: A key point here is that the action function will work for tracking current action data but not previous actions with the actions function. Attempting to do so will result in the **"Tracked properties can only reference its own action's inputs and outputs, trigger inputs and outputs and parameters."** error.
 
@@ -26,29 +26,29 @@ NOTE: A key point here is that the action function will work for tracking curren
 
 Using "**utcNow**()" as a tracked property for an action creates an interesting result. At first impression, we would be led to believe this may represent the start time of an action. However, when reviewing the output **this function actually produces the end time exactly as if we were to reference it from the output of the action**. Consider the below gif:
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate//TrackedProps/TrackedProperties-UtcNow-EndTime.gif"  />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate//TrackedProps/TrackedProperties-UtcNow-EndTime.gif"  />
 
 You can see that the five second delay is showing the tracked property "FiveSecondDelay" as the same timestamp as the endTime from the output!
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate//TrackedProps/TrackedProperties-UtcNow-EndTimeCompareToStartTime.JPG"  />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate//TrackedProps/TrackedProperties-UtcNow-EndTimeCompareToStartTime.JPG"  />
 
 Finally, as we look to **Azure Logic Apps** and what may come with **Microsoft Power Automate**, we can see how tracked properties work with monitoring solutions. **Azure Logic Apps** can [connect to Azure Log Analytics natively](https://docs.microsoft.com/en-us/azure/logic-apps/monitor-logic-apps-log-analytics) to log logic app runs. One way to extend the information stored in the log store is to [use Tracked Properties](https://docs.microsoft.com/en-us/azure/logic-apps/monitor-logic-apps-log-analytics#extend-data). 
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate//TrackedProps/logic-app-run-details.png"  />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate//TrackedProps/logic-app-run-details.png"  />
 
 ## Handling and Capturing Errors in Actions
 
 Typically **Microsoft Power Automate** flows will fail out if an issue occurs. Manually we can review these failures in the Power Automate Portal or with PowerShell. However inside the Power Automate flow we have the ability to track the *statusCode* within the actions function. Along with the **Configure Run After** setting we can conditionally capture any error messages and report or store for analysis.
 
-<img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/PowerAutomate/MockError-HTTP-ConfigureRunAfter.JPG" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/MockError-HTTP-ConfigureRunAfter.JPG" />
 
 **The Configure Run After setting allows the flow to continue if an error or timeout occurs**. This can be used in conjunction with the below image showing a conditional based on status code of a previous HTTP request output body:
 
-<img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/PowerAutomate/MockError-HTTP-Designer-Conditional.JPG" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/MockError-HTTP-Designer-Conditional.JPG" />
 
 [This documentation from Azure Logic Apps](https://docs.microsoft.com/en-us/azure/logic-apps/logic-apps-exception-handling) does a great job detailing the "run after" behavior. Each action is marked with a status of "**Succeeded**", "**Failed**", "**Skipped**" or "**TimedOut**". The below image, from the Azure Logic App documentation, details how the "run after" behavior works in parallel branches.
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/ErrorHandling/status-evaluation-for-parallel-branches.png"  />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/ErrorHandling/status-evaluation-for-parallel-branches.png"  />
 
 ### Retry Policies
 
@@ -60,7 +60,7 @@ In the case of **Microsoft Power Automate** and **Azure Logic Apps**, we have a 
 
 [Integration actions can be simulate responses](https://docs.microsoft.com/en-us/azure/logic-apps/test-logic-apps-mock-data-static-results) which can be helpful to troubleshoot without invoking a live system or for designing error handling.
 
-<img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/PowerAutomate/MockError-DevOps-StaticResult.JPG" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/MockError-DevOps-StaticResult.JPG" />
 
 **These simulated responses can be used, similar to mocks, when developing custom APIs and are quite useful when building custom connectors**. The response can be successful, error prone, time out prone, etc based on the scenario. A specific status code and response can be added to help troubleshoot these specific scenarios.
 
@@ -68,19 +68,19 @@ The image below shows setting up a failed mock response and the many different e
 
 NOTE: **Depending on what connector you're using, you may not be able to use certain error codes.**
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/ErrorHandling/MockResponses.VariousErrorCodesAndMessages.JPG"  />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/ErrorHandling/MockResponses.VariousErrorCodesAndMessages.JPG"  />
 
-The below image shows mocking a **Common Data Service** [API throttled](https://docs.microsoft.com/en-us/powerapps/developer/common-data-service/api-limits#how-service-protection-api-limits-are-enforced) error response:
+The below image shows mocking a **Dataverse** [API throttled](https://docs.microsoft.com/en-us/powerapps/developer/common-data-service/api-limits#how-service-protection-api-limits-are-enforced) error response:
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/ErrorHandling/MockResponses.Error.CDS.APIThrottled.JPG"  />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/ErrorHandling/MockResponses.Error.CDS.APIThrottled.JPG"  />
 
-This image shows mocking a **Common Data Service** [Too Many Concurrent Requests](https://docs.microsoft.com/en-us/powerapps/developer/common-data-service/api-limits#service-protection-api-limit-errors-returned) error response:
+This image shows mocking a **Dataverse** [Too Many Concurrent Requests](https://docs.microsoft.com/en-us/powerapps/developer/common-data-service/api-limits#service-protection-api-limit-errors-returned) error response:
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/ErrorHandling/MockResponses.Error.CDS.ConcurrentRequests.JPG"  />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/ErrorHandling/MockResponses.Error.CDS.ConcurrentRequests.JPG"  />
 
-Finally, the below image shows the run history and capturing the error response from the **Common Data Service**:
+Finally, the below image shows the run history and capturing the error response from the **Dataverse**:
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/ErrorHandling/MockResponses.Error.CDS.ConcurrentRequests.Response.JPG" style="zoom: 80%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/ErrorHandling/MockResponses.Error.CDS.ConcurrentRequests.Response.JPG" style="zoom: 80%;" />
 
 ### Throttling with Azure Logic Apps
 
@@ -102,7 +102,7 @@ The below reference and steps are taken from the [**Azure Logic Apps** document 
 
    [Perform runtime debugging]: https://docs.microsoft.com/en-us/azure/logic-apps/logic-apps-diagnosing-failures#perform-runtime-debugging	"Perform runtime debugging"
 
-   <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/ErrorHandling/Catch-Webhook-Tester-Site.JPG" style="zoom:50%;" />
+   <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/ErrorHandling/Catch-Webhook-Tester-Site.JPG" style="zoom:50%;" />
 
 For more information, [review the documentation here.](https://docs.webhook.site/)
 
@@ -114,17 +114,17 @@ For more information, [review the documentation here.](https://docs.webhook.site
 
 In the image below are three scope objects titled "**Try**", "**Catch**" and "**Finally**".
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/ErrorHandling/TryCatchFinallyPattern.JPG"  />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/ErrorHandling/TryCatchFinallyPattern.JPG"  />
 
 From a recent flow run, expanding the **Try** block, we can see two successful actions followed by our mocked failed response from the Common Data Service:
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/ErrorHandling/Scopes.TryCatchExample.JPG"  />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/ErrorHandling/Scopes.TryCatchExample.JPG"  />
 
 The **Catch** scope underneath the **Try** scope is using the run after property of the Try scope to **<u>catch results with a status of "Failed"</u>**. If any actions inside the Try scope, at least how this example is configured, fails, the Catch scope will begin processing. The remaining actions within the Try scope are not processed.
 
 Below is an image of **the Catch scope with Tracked Propertie**s:
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/ErrorHandling/Action-Catch-TrackedProperties-Try.JPG"  />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/ErrorHandling/Action-Catch-TrackedProperties-Try.JPG"  />
 
 To work with the Try scope within the Catch scope, we will **use the results function which provides context to what happened within the Try scope**.
 
@@ -134,13 +134,13 @@ The [results()](https://docs.microsoft.com/en-us/azure/logic-apps/workflow-defin
 
 The image below shows a successful action named "successful_try_action" and a failed action named "Condition". Each action includes two properties, **code** and **message** that can be used [to filter the array](https://docs.microsoft.com/en-us/azure/logic-apps/logic-apps-perform-data-operations#filter-array-action). The *successful action is in green while the failed action is in red*.
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/ErrorHandling/Result-CatchMultipleTry-SuccessAndFailure.JPG"  />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/ErrorHandling/Result-CatchMultipleTry-SuccessAndFailure.JPG"  />
 
 Finally, the below gif shows **working with the Try, Catch, Finally pattern and scope and results objects to capture and report**. This technique can be continued to then **send data to Azure Application Insights or Azure Log Analytics** as briefly shown below. I'll cover this in an upcoming article!
 
 
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/ErrorHandling/ErrorHandling-Scopes-Try-ResultFunction.gif"  />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/ErrorHandling/ErrorHandling-Scopes-Try-ResultFunction.gif"  />
 
 ## Next Steps
 
@@ -148,7 +148,7 @@ In this article we have discussed tracking properties across actions to help sup
 
 In previous articles, [we discussed how to **evaluate workflows, triggers and run functions to help deliver insights**](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-power-automate---run-time-part-1-triggers-workflows-and-actions). In the following articles covering **Microsoft Power Automate Flow** run time, we will discuss **pushing events to Application Insights and reviewing previous flow runs for monitoring and governance**.
 
-If you are interested in learning more about [**specialized guidance and training** for monitoring or other areas of the Power Platform](https://community.dynamics.com/crm/b/crminthefield/posts/pfe-dynamics-365-service-offerings), which includes a [monitoring workshop](https://community.dynamics.com/cfs-file/__key/communityserver-blogs-components-weblogfiles/00-00-00-17-38/WorkshopPLUS-_2D00_-Dynamics-365-Customer-Engagement-Monitoring-with-Application-lnsights-1-Day-with-Lab_2D00_FA5D599F_2D00_20E4_2D00_4087_2D00_A713_2D00_39FBD14DF7E5.pdf), please contact your **Technical Account Manager** or **Microsoft representative** for further details. 
+If you are interested in learning more about [**specialized guidance and training** for monitoring or other areas of the Power Platform](https://community.dynamics.com/crm/b/crminthefield/posts/pfe-dynamics-365-service-offerings), which includes a [monitoring workshop](https://community.dynamics.com/crm/b/crminthefield/posts/pfe-dynamics-365-service-offerings), please contact your **Microsoft representative** for further details. 
 
 Your feedback is **<u>extremely valuable</u>** so please leave a comment below and I'll be happy to help where I can! Also, if you find any inconsistencies, omissions or have suggestions, [please go here to submit a new issue](https://github.com/aliyoussefi/MonitoringPowerPlatform/issues).
 
