--- a/docs/05.03.03 - Monitoring Power Automate - Run Time - Implementing a Monitoring Strategy.md
+++ b/docs/05.03.03 - Monitoring Power Automate - Run Time - Implementing a Monitoring Strategy.md
@@ -22,11 +22,11 @@ Before we get into identifiers, please take a moment to review the **Tracked Pro
 
 **Power Automate** includes its own correlation identifiers as referenced in the **Get-FlowRun** cmdlet as part of the *ClientTrackingId*. This identifier can be obtained in the flow itself by use of the outputs object. Consider using this or a custom tracking identifier when working with external integrations to assist with application and workload monitoring. By implementing this early, the beginnings of an application map can appear when working with **Azure Application Insights** as shown below.
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/AppInsights/AppInsights-ApplicationMap.png" style="zoom:50%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/AppInsights/AppInsights-ApplicationMap.png" style="zoom:50%;" />
 
-[Using the guid() function](https://docs.microsoft.com/en-us/azure/logic-apps/workflow-definition-language-functions-reference#guid), we can **generate a identifier based on various formats that can be used as the ClientTrackingId** or **passed to other connector actions such as Common Data Service** creates or updates or even custom connectors as detailed below.
+[Using the guid() function](https://docs.microsoft.com/en-us/azure/logic-apps/workflow-definition-language-functions-reference#guid), we can **generate a identifier based on various formats that can be used as the ClientTrackingId** or **passed to other connector actions such as Dataverse** creates or updates or even custom connectors as detailed below.
 
-<img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/PowerAutomate/Trigger-Object-Recurrance-JSON.JPG" style="zoom:50%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/Trigger-Object-Recurrance-JSON.JPG" style="zoom:50%;" />
 
 
 
@@ -35,14 +35,17 @@ Before we get into identifiers, please take a moment to review the **Tracked Pro
 The **Custom Tracking Id**, part of the trigger, allows for the static of dynamic input of an identifier that can be passed in or set from the trigger and added to the response. This identifier can also be used across child flows to represent the calling or parent flow.
 
 As the image below shows, we can use the "***Custom Tracking Id***" field to set a static or dynamic value. This example shows setting the custom tracking id from a property in the body of a HTTP request called **correlatonid**. 
+```
+@triggerBody()?['correlationid']
+```
 
-<img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/PowerAutomate/PowerAutomate-Triggers-HTTP.JPG" style="zoom:50%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/PowerAutomate-Triggers-HTTP.JPG" style="zoom:50%;" />
 
 An added bonus to using the trigger in this fashion is that we now can add conditions that work as a gate keeper to our flow. In this scenario we can strictly enforce that if a correlating identifier is not provided to the flow, the flow will not run and return a message expecting the identifier. **<u>This design is very important to ensure visibility and supportability, and as such needs to be included as a first step, as we include more and more integrations into our workloads.</u>**
 
 In the example below we have a HTTP request and response **Power Automate flow**. <u>In the request a Tracking Id "PowerAutomateArticleExampleId" has been provided.</u>
 
-![CustomTrackingId-Trigger-Definition](C:\Users\alyousse\source\repos\aliyoussefi\D365-Monitoring.Wiki\Artifacts\PowerAutomate\CustomTrackingId-Trigger-Definition.JPG)
+![CustomTrackingId-Trigger-Definition]([C:\Users\alyousse\source\repos\aliyoussefi\D365-Monitoring.Wiki\Artifacts\PowerAutomate\](https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/CustomTrackingId-Trigger-Definition.JPG)
 
 In the response, captured in ***Fiddler*** or ***Postman***, we can see the response header now **includes our custom tracking Id** represented by **"x-ms-client-tracking-id"**.
 
@@ -50,41 +53,41 @@ In the response, captured in ***Fiddler*** or ***Postman***, we can see the resp
 
 This technique can be propagated down to [Child Flows](https://docs.microsoft.com/en-us/power-platform-release-plan/2019wave2/power-automate/call-child-flows) as well as shown below. As with the parent, the "**x-ms-client-tracking-id**" is now **included within the Child Flow**. This **allows the Child Flow to use the same tracking Id for any actions or tracked property**.
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/AppInsights/CustomTrackingId-ChildFlow-Response.JPG"  />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/AppInsights/CustomTrackingId-ChildFlow-Response.JPG"  />
 
 Finally, an added benefit is that this same custom tracking identifier will be available as part of the **"Get-FlowRun"** cmdlet covered in [Part 4: Reviewing Run History with Get-FlowRun](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-power-automate---run-time-part-4-reviewing-run-history). 
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/AppInsights/Get-FlowRun-correlation-to-HTTP-Request-Trigger-Header.JPG"  />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/AppInsights/Get-FlowRun-correlation-to-HTTP-Request-Trigger-Header.JPG"  />
 
 ## The Log Analytics Connector
 
 One approach that can help deliver event data to **Azure Monitor** is to utilize the **[Log Analytics Data Collector](https://docs.microsoft.com/en-us/connectors/azureloganalyticsdatacollector/)** connector. **<u>Utilizing the Azure Monitor HTTP Data Collector API, we can ingest data in virtually any structure using a JSON formatted string</u>**. Since every object in our **Power Automate Flow** is formatted in JSON we can send any item we want, from scopes to actions to the entire workflow.
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/LogAnalytics/LogAnalytics.CreateConnection.JPG"  />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/LogAnalytics/LogAnalytics.CreateConnection.JPG"  />
 
 ### Creating Custom Tables
 
 Below is an image showing custom tables created by using the **Log Analytics Data Collector** connection action.
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/LogAnalytics/LogAnalytics.CustomFlowTables.JPG"  />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/LogAnalytics/LogAnalytics.CustomFlowTables.JPG"  />
 
 Here are the actions that created these tables starting with the **PowerAutomateFlow** custom table.
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/LogAnalytics/LogAnalytics.PowerAutomateFlows.JPG" style="zoom:67%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/LogAnalytics/LogAnalytics.PowerAutomateFlows.JPG" style="zoom:67%;" />
 
 Here is the action for **PowerAutomateActions**:
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/LogAnalytics/LogAnalytics.PowerAutomateActions.JPG" style="zoom:67%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/LogAnalytics/LogAnalytics.PowerAutomateActions.JPG" style="zoom:67%;" />
 
-As shown, one of the benefits of **Log Analytics** is the ability to add custom tables to the workspace. When these custom tables are created, they can be added to by passing in additional properties. For instance, in the image I have a table for **Power Automate Actions** that was created by passing an action object in. Starting with a simple initialize variable I may only have a couple of fields created in my new table. <u>However by passing in a more robust output from an action, like the **Common Data Service**, I begin to  grow my table exponentially.</u>
+As shown, one of the benefits of **Log Analytics** is the ability to add custom tables to the workspace. When these custom tables are created, they can be added to by passing in additional properties. For instance, in the image I have a table for **Power Automate Actions** that was created by passing an action object in. Starting with a simple initialize variable I may only have a couple of fields created in my new table. <u>However by passing in a more robust output from an action, like the **Dataverse**, I begin to  grow my table exponentially.</u>
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/LogAnalytics/LogAnalytics.CustomFlowTables.AntiPatterns.TooManyFields.JPG"  />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/LogAnalytics/LogAnalytics.CustomFlowTables.AntiPatterns.TooManyFields.JPG"  />
 
 Here is an example gif showing using the workflow and action object. The workflow object is well defined however actions can become cumbersome. In this example we are splitting these into two separate tables. 
 
 **<u>NOTE: Consider using custom tables for specific actions.</u>**
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/LogAnalytics/UsingWorkflowAndActionInDataCollector.gif"  />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/LogAnalytics/UsingWorkflowAndActionInDataCollector.gif"  />
 
 This approach provides extreme flexibility but does come with a cost. Data can quickly become fragmented, null saturation can become unmanageable and even fields that we would often use for identifying can become obscure. We quickly can render our logs useless working this way and should provide some limits to what can be provided. **<u>Without meaningful data, what value are the logs we're capturing?</u>**
 
@@ -102,7 +105,7 @@ The next section will go into building a direct request to **Azure Application I
 
 To achieve this we will send a **POST** message to the **Application Insights** endpoint with the definition of the specific event we want to capture. **<u>This endpoint can accept one or multiple messages so it can be used at the end of a Power Automate flow run or really anywhere</u>**. Combining the messages and sending at the end would follow a similar approach as with the **Azure Log Analytics Data Collector** action. As long as the action is ensured to run and we have our contracts correctly defined, we can rely on the API to deliver our messages. **<u>One of the benefits of the Application Insights endpoint is it does allow any well defined message payload and will report back the number of accepted and failed messages</u>**.
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/AppInsights/AppInsights.HTTP.Request1.JPG" style="zoom:50%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/AppInsights/AppInsights.HTTP.Request1.JPG" style="zoom:50%;" />
 
 The trigger I'm using here is [**the Power Apps trigger**](https://docs.microsoft.com/en-us/connectors/powerappsnotification/) which allow for use of this flow as a child flow. Remember, to use this flow in this manner utilizing **Child Flows**, the **<u>flow must be solution aware</u>**.
 
@@ -112,17 +115,17 @@ The trigger I'm using here is [**the Power Apps trigger**](https://docs.microsof
 
 **The data property is specific to each message type** and will include a **baseType** and **baseData** property within. A good reference for finding out more can be found on the [ApplicationInsights-JS Interfaces folder.](https://github.com/microsoft/ApplicationInsights-JS/tree/master/shared/AppInsightsCommon/src/Interfaces) **<u>For each message type, be it exceptions, custom events, traces, etc., there are common and explicit properties</u>**. Consider the below image.
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/AppInsights/AppInsights.HTTP.Body.JPG" style="zoom:50%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/AppInsights/AppInsights.HTTP.Body.JPG" style="zoom:50%;" />
 
 The image above shows how to take the contract for a specific table and inject variables which will show up in **Application Insights**. In this example I'm only using the **customEvents** table but this can easily be extended for all tables within **Application Insights**.
 
 Most tables in **Application Insights** include a **customDimensions** and **customMeasurements** property bag which I would recommend passing contextual data from the flow. In the example above, the properties property within **baseData** allow for a json object to be passed in. The **image above shows the trigger function** but this could also be the workflow object, or maybe a particular action that failed. The below image shows **<u>using the action object output with the Exception message</u>** in **Azure Application Insights**.
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/AppInsights/AppInsights.HTTP.Body.Exception.JPG" style="zoom:50%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/AppInsights/AppInsights.HTTP.Body.Exception.JPG" style="zoom:50%;" />
 
 All tables **include user and session data points** which can be used to help facilitate out of the box capabilities in Application Insights such as the application map mentioned above.
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/AppInsights/AppInsights-PowerAutomateTrigger.JPG"  />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/AppInsights/AppInsights-PowerAutomateTrigger.JPG"  />
 
 ### Utilizing Azure Functions and Custom Connectors
 
@@ -132,7 +135,7 @@ All tables **include user and session data points** which can be used to help fa
 
 The information above has provided mechanisms showing how to deliver events to **Azure Monitor utilizing the Azure Log Analytics Data Collector or the Azure Application Insights REST API**. Choosing one of the other requires considerations into the features and benefits and maybe more importantly the limitations of both. For an overview of each please review the [Monitoring the Power Platform: Introduction and Index](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-introduction) article.
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/LogAnalytics/workspaces.png"  />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PowerAutomate/LogAnalytics/workspaces.png"  />
 
 As we progress through the **Monitoring the Power Platform series**, we will dive deeper into these considerations and why to choose one over the other based on requirements. Ultimately the log store for **Azure Application Insights** is available in **Azure Log Analytics** but the features provided by **Azure Application Insights** allow for deep "insights" into scenarios we are interested in.
 
@@ -142,7 +145,7 @@ In this article we have discussed **using custom identifiers to help track flow 
 
 In previous articles, [we discussed how to **evaluate workflows, triggers and run functions to help deliver insights**](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-power-automate---run-time-part-1-triggers-workflows-and-actions). In the following articles covering **Microsoft Power Automate Flow** run time, we will discuss **pushing events to Application Insights and reviewing previous flow runs for monitoring and governance**.
 
-If you are interested in learning more about [**specialized guidance and training** for monitoring or other areas of the Power Platform](https://community.dynamics.com/crm/b/crminthefield/posts/pfe-dynamics-365-service-offerings), which includes a [monitoring workshop](https://community.dynamics.com/cfs-file/__key/communityserver-blogs-components-weblogfiles/00-00-00-17-38/WorkshopPLUS-_2D00_-Dynamics-365-Customer-Engagement-Monitoring-with-Application-lnsights-1-Day-with-Lab_2D00_FA5D599F_2D00_20E4_2D00_4087_2D00_A713_2D00_39FBD14DF7E5.pdf), please contact your **Technical Account Manager** or **Microsoft representative** for further details. 
+If you are interested in learning more about [**specialized guidance and training** for monitoring or other areas of the Power Platform](https://community.dynamics.com/crm/b/crminthefield/posts/pfe-dynamics-365-service-offerings), which includes a [monitoring workshop](https://community.dynamics.com/crm/b/crminthefield/posts/pfe-dynamics-365-service-offerings), please contact your **Microsoft representative** for further details. 
 
 Your feedback is **<u>extremely valuable</u>** so please leave a comment below and I'll be happy to help where I can! Also, if you find any inconsistencies, omissions or have suggestions, [please go here to submit a new issue](https://github.com/aliyoussefi/MonitoringPowerPlatform/issues).
 
