Added Azure Monitor Community Artifacts article

--- a/docs/01.01 - Monitoring the Power Platform Introduction.md
+++ b/docs/01.01 - Monitoring the Power Platform Introduction.md
@@ -56,6 +56,6 @@ As pointed out above Application Insights and Log Analytics can be utilized for 
 
 For Power Platform workloads, Application Insights provides robust features within most services allowing for a straight forward approach for incorporation. The purpose of this document will focus on how to implement a monitoring strategy for transactional operations as well as operational health across the Power Platform and connected resources using these native features. In the case where a monitoring solution doesn't exist we will explore documented features to help deliver messages.
 
-The following chapters will cover the Power Apps Model, Canvas and Portal apps, Power Automate, Power BI and more recent intelligence offerings such as Power Virtual Agent and AI Builder across the Power Platform. The goal is to source and enrich messaging to a centralized area for analysis to assist and educate on usage and health. Like the Power Platform, applications and features are being added all the time and so this document represents a point in time reference and should be considered a work always in progress.
+The following chapters will cover the Power Apps Model and Canvas Apps, Power Pages, Power Automate, Power BI and more recent intelligence offerings such as Microsoft Copilot Studio and AI Builder across the Power Platform. The goal is to source and enrich messaging to a centralized area for analysis to assist and educate on usage and health. Like the Power Platform, applications and features are being added all the time and so this document represents a point in time reference and should be considered a work always in progress.
 
 Thank you and I hope you enjoy!
